--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple200">#CE93D8</color>
+    <color name="orange_300">#FFB74D</color>
+    ""
+
 </resources>
