--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="10dp">
+        android:padding="@dimen/elevation_and_padding">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/list_IMG_background"
@@ -20,271 +20,26 @@
             android:layout_height="match_parent"
             android:alpha="0.5" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/record_MTV_main_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="TOP RECORDS"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size"
-            android:textStyle="bold" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/record_Layout_Player"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/title_margin"
-            android:layout_marginTop="@dimen/general_size_and_margin"
-            android:gravity="start"
-            android:orientation="vertical">
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_player_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/player_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/title_size"
-                android:textStyle="bold" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_player0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:text="@string/player_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_player1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:text="@string/player_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_player2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:text="@string/player_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_player3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:text="@string/player_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_player4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:text="@string/player_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_player5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:text="@string/player_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_player6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:text="@string/player_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_player7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:text="@string/player_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_player8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:text="@string/player_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_player9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:text="@string/player_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/record_Layout_score"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/general_size_and_margin"
-            android:layout_marginEnd="@dimen/title_margin"
-            android:gravity="end"
-            android:orientation="vertical">
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_record_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Score"
-                android:textColor="@color/black"
-                android:textSize="@dimen/title_size"
-                android:textStyle="bold" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_score0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:gravity="start"
-                android:text="@string/score_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_score1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:gravity="start"
-                android:text="@string/score_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_score2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:gravity="start"
-                android:text="@string/score_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_score3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:gravity="start"
-                android:text="@string/score_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_score4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:gravity="start"
-                android:text="@string/score_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_score5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:gravity="start"
-                android:text="@string/score_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_score6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:gravity="start"
-                android:text="@string/score_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_score7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:gravity="start"
-                android:text="@string/score_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_score8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:gravity="start"
-                android:text="@string/score_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/record_MTV_score9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/player_record_margin"
-                android:gravity="start"
-                android:text="@string/score_title"
-                android:textColor="@color/black"
-                android:textSize="@dimen/record_size" />
-
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
     </FrameLayout>
-
+<!--    MARK: MAP_FRAME-->
     <FrameLayout
         android:id="@+id/record_FRAME_map"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="10dp">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/map_BTN_back"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:backgroundTint="@color/orange_300"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="@dimen/margin_default"
-            android:layout_marginHorizontal="100dp"
-            android:textColor="@color/black"
-            android:textSize="@dimen/title_size"
-            android:text="Main"
-            />
-
-
+        android:padding="@dimen/elevation_and_padding">
 
     </FrameLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/map_BTN_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/orange_300"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="@dimen/small_margin_default"
+        android:textColor="@color/black"
+        android:textSize="@dimen/small_text_size"
+        android:text="@string/main"
+        />
 </androidx.appcompat.widget.LinearLayoutCompat>
