--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -20,11 +20,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragment_RECYCLER_itemList"
-        android:layout_width="@dimen/main_frame_size"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:layout_below="@id/record_MTV_main_title"
         android:layout_marginTop="@dimen/small_margin_default"
         android:layout_centerHorizontal="true"
+        tools:listitem="@layout/player_record"
         />
 
 </RelativeLayout>
