--- a/app/src/main/res/layout/player_record.xml
+++ b/app/src/main/res/layout/player_record.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_marginTop="@dimen/small_margin_default"
     android:layout_centerHorizontal="true"
@@ -9,10 +9,23 @@
     >
 
     <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/player_MTV_index"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/small_margin_default"
+        android:textSize="@dimen/small_text_size"
+        android:layout_marginTop="@dimen/small_margin_default"
+        android:textColor="@color/black"
+        android:text="1." />
+
+
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/player_MTV_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_margin_default"
+        android:layout_alignStart="@id/player_MTV_index"
+        android:layout_marginStart="@dimen/big_margin_default"
+        android:layout_marginTop="@dimen/small_margin_default"
         android:textSize="@dimen/small_text_size"
         android:textColor="@color/black"
         android:text="@string/name_edit" />
@@ -21,18 +34,19 @@
         android:id="@+id/player_MTV_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/player_MTV_name"
-        android:layout_marginStart="@dimen/big_margin_default"
+        android:layout_alignStart="@id/player_MTV_name"
+        android:layout_marginStart="@dimen/main_frame_size"
+        android:layout_marginTop="@dimen/small_margin_default"
         android:textSize="@dimen/small_text_size"
         android:textColor="@color/black"
         android:text="@string/score_title" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/player_IMG_playerMap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/big_margin_default"
+        android:layout_height="@dimen/big_margin_default"
         android:scaleType="centerCrop"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="@dimen/small_margin_default"
-        android:src="@tools:sample/avatars" />
+        android:src="@drawable/map" />
 </RelativeLayout>
