--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,10 @@
     <dimen name="witches_layout_high">85dp</dimen>
     <!-- sizes -->
     <dimen name="main_frame_size">200dp</dimen>
+    <dimen name="score_txt_margin_start">120dp</dimen>
     <dimen name="start_button_margin">70dp</dimen>
     <dimen name="big_margin_default">50dp</dimen>
+    <dimen name="map_image_margin_top">20dp</dimen>
     <dimen name="small_margin_default">16dp</dimen>
     <dimen name="elevation_and_padding">10dp</dimen>
     <!-- text-->
